src/routes/game/components/combatChain/CombatChain.module.css
.combatChain {
  position: relative;
  height: 20dvh;
  margin: auto;
  width: 95%;
  padding: 1vh;
  background: none;
  border: none;
  outline: none;
  border-radius: 0.75em;
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: space-between;
  color: var(--white);
  isolation: isolate;
  border: 1px solid goldenrod;
  background-color: var(--near-black);
  pointer-events: auto;
}

.combatChain::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -1;
}

.experimental {
  background: rgba(50, 50, 50, 0.5);
  border: 2px solid rgba(255, 255, 255, 0.5);
  outline: 1px solid black;
}

.grabbyHandle {
  width: calc(var(--card-size) * 0.3);
  height: 100%;
  background-color: maroon;
  border-radius: 10px;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
}

.grabbyHandleButtonContainer {
  height: '50%';
  display: 'flex'; 
  justify-content: 'center';
  align-Items: 'center';
}

.grabbyHandleButton {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(0, 0, 0, 0.5);
  color: var(--white);
  border-radius: 5px;
  width: 1.5em;
  height: 1.5em;
  font-size: 1.75em;
  padding: 2px;
  margin: 0.25em;
  pointer-events: auto;
  user-select: none;
  cursor: pointer;
}

.chainCentre {
  padding-left: 1vh;
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 0.5vh;
  flex-grow: 2;
  flex-basis: 1 0 100%;
}

@media (orientation: portrait) {
  .combatChain {
    height: 12em;
  }
}

.icon {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(0, 0, 0, 0.5);
  border: var(--primary) solid 1px;
  color: var(--white);
  border-radius: 5px;
  width: 1.5em;
  height: 1.5em;
  font-size: 1.75em;
  padding: 2px;
  margin: 0.25em;
  pointer-events: auto;
  user-select: none;
  cursor: pointer;
}

.playerPrompt {
  top: 100%;
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  min-width: 35dvw;
  display: flex;
  justify-content: center;
  align-items: center;
  align-content: center;
  flex-wrap: nowrap;
  background-color: var(--near-black);
  border-width: 1px 1px 1px 1px;
  border-radius: 0 0 0.5em 0.5em;
  border-color: goldenrod;
  padding: 5px;
  border-style: solid;
  font-size: 1.2em;
  gap: 3px;
  z-index: -5;
}

.buttonDiv {
  background-color: goldenrod;
  color: black;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  width: fit-content;
  height: fit-content;
  min-width: 2em;
  min-height: 2em;
  border-radius: 5px;
  border: 1px solid black;
  flex-basis: auto;
  padding: 0 1dvh;
  margin-left: 5px;
  font-size: 1em;
  font-weight: 500;
}

.buttonDiv:hover {
  background-color: black;
  color: goldenrod;
  border: 1px solid goldenrod;
  cursor: pointer;
}

.content {
  flex-grow: 1;
}

